--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.0.10",
     "gray-matter": "^4.0.3",
     "mongodb": "^6.5.0",
     "next": "^13.0.7",
